xfsprogs-1.3.6 (31 August 2001)
	- make mkfs.xfs aware of geometries that might cause
	  inode numbers to exceed 32 significant bits.
	- make xfs_growfs warn if new filesystem will have
	  inode numbers that exceed 32 significant bits.
	- fix logprint bug in reporting extended attributes
	  (thanks to Tang Lingbo <tanglb@sina.com> for fixing this)
	- fix mkfs.xfs core dump when attemping to run on devices
	  which are too small to hold a valid XFS filesystem

xfsprogs-1.3.5 (13 August 2001)
	- fix bug in xfs_db bit handling on big endian platforms
	- fix mkfs bug related to too-small final allocation group
	- fix signedness bug in DMAPI ioctl structure definition

xfsprogs-1.3.4 (04 August 2001)
	- fix endian bug in xfs_db "frag" command
	- small configure script changes to allow cross compilation
	- several man pages updated to document external log usage
	- install another shared library symlink for ld to find
	- switched on -fno-strict-aliasing for library object builds
	- fix several minor compiler warnings when building on IA64

xfsprogs-1.3.3 (27 July 2001)
	- fixes for (hopefully) the last few nits in libtool usage

xfsprogs-1.3.2 (23 July 2001)
	- install static libs and libtool archives into /usr/lib
	- shared libraries are unchanged, however

xfsprogs-1.3.1 (15 July 2001)
	- updated xfs_types.h file from the kernel changes needed for
	  an xfsdump fix.
	- tidy up various aspects of the libtool rework
	- XVM stripe unit/width extraction
	- fix an endian bug in xfs_db "write" command
	- fix a build problem with liblvm.a installed
	- fix bug in xfs_growfs mount option parsing with external log
	- BLKSZSET ioctl now conditional via the Makefile (off by default)
	- rework some of the Debian packaging rules
	- fix sign of BLKGETSIZE ioctl argument in libxfs
	- updated xfs_fs.h with DMAPI setdm details for dump/restore

xfsprogs-1.3.0 (11 July 2001)
	- reworked Makefiles to use libtool
	- new libdisk to allow sharing of generic mount/disk code and